[gd_scene load_steps=10 format=3 uid="uid://dm7bcw82b0vv8"]

[ext_resource type="Script" path="res://scripts/enemies/basic_enemy_title_screen.gd" id="1_cfu71"]
[ext_resource type="Texture2D" uid="uid://bwir2s2huib6f" path="res://graphics/enemy.png" id="2_rkefa"]
[ext_resource type="Texture2D" uid="uid://dietthbp24v1a" path="res://graphics/enemy_chasis.png" id="3_7nm72"]
[ext_resource type="PackedScene" uid="uid://drd2m072phc4v" path="res://scenes/hitbox.tscn" id="4_4cb26"]
[ext_resource type="PackedScene" uid="uid://cwshy400yx3qo" path="res://scenes/hurt_box.tscn" id="5_8cbtv"]
[ext_resource type="Texture2D" uid="uid://d3otih1xwa7g2" path="res://graphics/progress_bar.png" id="6_vm508"]

[sub_resource type="CircleShape2D" id="CircleShape2D_48w8c"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8mox"]
resource_local_to_scene = true
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xonui"]
resource_local_to_scene = true
size = Vector2(16, 16)

[node name="BasicEnemy" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_cfu71")
base_fire_interval = 2.0
max_hp = 20
base_speed = 48
max_speed = 192
max_power = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_48w8c")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
path_max_distance = 10.0
avoidance_enabled = true
radius = 20.0
neighbor_distance = 128.0
max_speed = 192.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Body" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
texture = ExtResource("2_rkefa")

[node name="Chasis" type="Sprite2D" parent="Body"]
texture = ExtResource("3_7nm72")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_4cb26")]
visible = false
collision_layer = 32
collision_mask = 512
target = NodePath("..")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_d8mox")

[node name="HurtBox" parent="." instance=ExtResource("5_8cbtv")]
visible = false
collision_layer = 256
collision_mask = 0
monitoring = false
damage = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xonui")

[node name="HealthBarPivot" type="Marker2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="HealthBarPivot"]
visible = false
custom_minimum_size = Vector2(16, 4)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -15.0
offset_right = 8.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
nine_patch_stretch = true
texture_progress = ExtResource("6_vm508")
metadata/_edit_use_anchors_ = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]

[editable path="Hitbox"]
[editable path="HurtBox"]
